<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Episodes.E11_ViewPager">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>


    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:alpha=".85">



        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/previous_song"
            android:textColor="@color/white"
            android:visibility="invisible"/>



        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/test"
            android:gravity="center"
            android:layout_toRightOf="@id/back"
            android:layout_toLeftOf="@id/next"
            android:textColor="@color/white"
            android:textSize="16sp"/>



        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/next_song"
            android:textColor="@color/white"/>




    </RelativeLayout>

</RelativeLayout>